--- a/Week_03/第3周第2课作业2-实现路由器..md
+++ b/Week_03/第3周第2课作业2-实现路由器..md
@@ -1,7 +1,7 @@
 ### 1-4.实现路由器
 实现思路是在实现了IHttpClient接口的类内部，调用http请求后台接口之前，调用路由器的方法，选择具体哪个后台服务器进行访问，  
 可以实现多种路由器，每个路由器拥有自己的一套算法，  
-本项目实现了随机抽选和轮询路由器RandomHttpEndpointRouter和RoundRibbonHttpEndpointRouter。      
+本项目实现了随机抽选和轮询路由器RandomHttpEndpointRouter和**RoundRibbonHttpEndpointRouter**。      
 增加路由器涉及到的主要类：  
 io.github.kimmking.gateway.inbound.HttpInboundInitializer  
 io.github.kimmking.gateway.router.RouterType  
